# studia

./: .gitignore
embedded/lab4/: l4z3.txt
embedded/proj2/: dane.tex  uc.tex  zadania.tex
embedded/proj3/: components.docx  connections.docx
embedded/proj4/: opis.docx  stany.uxf
embedded/proj5/: diagramy_aktywnosci.docx  main.uxf  temp_adjustment.uxf
grafika/lab1/: index.html  ineractive.html  interaktywny_zolw.js  zolw.js
grafika/lab2/: line_loop.html  zad1.html  zad3.html
grafika/lab3/: plotting.html  plotting_script.js
grafy/: projekt_zdanko.tar.xz  projekt_zdanko.tex
jftt/: l2z4.tex  l3z6.tex  l6z3.tex
jftt/lab1/: CMakeLists.txt
jftt/lab1/lab1/: CMakeLists.txt  lab1.cpp  lab1.h
jftt/lab2/: asdf.txt  lex.yy.c  test.c  test3t.txt  zad1.lex  zad2.lex  zad3.lex  zad4.lex  zad4_fixed.lex
jftt/lab3/: Makefile  kalkulator  kalkulator.l  kalkulator.y  kalkulator_l.c  kalkulator_l.cpp  kalkulator_y.c  kalkulator_y.cpp  kalkulator_y.h  kalkulator_y.hpp
jftt/projekt/: Makefile  README.txt  kompilator  kompilator.l  kompilator.y  test.txt  test_results.txt
kkd/lab1/: Makefile  entrophinator  entrophinator.cpp
kkd/lab2/: arithmetic.py  decode.py  encode.py
kkd/lab3/: decode.py  encode.py
kkd/lab4/: JPEGLS_analyzer.py
kkd/lab5/: out.tga  quantizator.py  template.py
kkd/lab6/: decode.py  encode.py  get_err.py
kkd/lab7/: check.py  decode.py  encode.py  hamming_ex.py  noise.py
logika/lab1/: zad1.pl  zad2.pl  zad3.pl  zad4.pl  zad5.pl  zad6.pl
logika/lab2/: zad3.pl  zad4.pl  (+1 more)
obliczenia_naukowe/: zad4.csv
sygały/: sygały — skrót.lnk
(+275 files in other folders)
